aggiunta diritti e link al portfolio

--- a/src/app/compare/pkmn-comparison/pkmn-comparison.component.html
+++ b/src/app/compare/pkmn-comparison/pkmn-comparison.component.html
@@ -160,4 +160,5 @@
       </div>
     </div>
   </div>
+  <small class="text-center d-block text-white py-5 px-2">Scopri altri progetti su <a class="text-white" target="_blank" href="https://gennerentola.github.io/">Gennaro Notaro</a></small>
 </main>
