--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,5 @@
 <header class="d-flex justify-content-center">
+  <div>
     <a class="text-decoration-none" routerLink="/"><img src="../../assets/img/saladexLogo.png" alt="saladex" class="pt-3 mx-auto"></a>
+  </div>
 </header>
