--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,5 +35,6 @@
       </div>
     </div>
   </div>
-  <small class="text-center text-decoration-underline d-block text-white pb-5 px-2">Tutti i diritti sono riservati ai legittimi proprietari.</small>
+  <small class="text-center d-block text-white pt-5 px-2">Tutti i diritti sono riservati ai legittimi proprietari.</small>
+  <small class="text-center d-block text-white pb-5 px-2">Scopri altri progetti su <a class="text-white" target="_blank" href="https://gennerentola.github.io/">Gennaro Notaro</a></small>
 </main>
