--- a/src/app/pokedex/search/search.component.html
+++ b/src/app/pokedex/search/search.component.html
@@ -20,4 +20,5 @@
   <small class="text-center text-decoration-underline d-block text-white pb-5 px-2">Le descrizioni in italiano non sono
     disponibili per i pokemon della nona generazione.</small>
   <app-dex-card [pokemon]="pkmnFound"></app-dex-card>
+  <small class="text-center d-block text-white py-5 px-2">Scopri altri progetti su <a class="text-white" target="_blank" href="https://gennerentola.github.io/">Gennaro Notaro</a></small>
 </main>
