--- a/src/app/compare/pkmn-comparison/pkmn-comparison.component.html
+++ b/src/app/compare/pkmn-comparison/pkmn-comparison.component.html
@@ -30,7 +30,7 @@
         </mat-autocomplete>
       </form>
     </div>
-    <div class="card text-center" *ngIf="firstPokemon && secondPokemon">
+    <div class="card text-center mt-3" *ngIf="firstPokemon && secondPokemon">
       <div class="card-header">
         <div class="d-flex flex-column flex-md-row justify-content-around align-items-center">
           <div class="d-flex align-items-center align-self-md-end pkmnHeader firstPkmnLegend" (click)="goToDexCard(firstPokemon.name)">
