--- a/src/app/pokedex/search/search.component.scss
+++ b/src/app/pokedex/search/search.component.scss
@@ -1,4 +1,5 @@
 mat-form-field {
+  height: 35px;
   width: 100%;
   @media screen and (min-width: 992px) {
     width: 50%;
@@ -12,6 +13,10 @@ mat-form-field {
     'GRAD' 0,
     'opsz' 48;
   font-size: 2rem;
+}
+
+:host::ng-deep.mat-mdc-form-field-subscript-wrapper {
+  display: none;
 }
 
 ::ng-deep.cdk-overlay-pane {
