--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,8 +16,7 @@
           <div class="card-body d-flex flex-column justify-content-between">
             <h5 class="card-title text-center">BATTLE SIMULATOR</h5>
             <p class="card-text">Non ancora disponibile.</p>
-            <a href="https://i.etsystatic.com/6144628/r/il/7e0a9d/1038611636/il_fullxfull.1038611636_9gqb.jpg"
-              target="_blank" class="btn btn-primary w-100">VAI</a>
+            <a routerLink="/pkmn-selection" class="btn btn-primary w-100">VAI</a>
           </div>
         </div>
       </div>
