--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,21 @@
-<header class="d-flex justify-content-center">
-  <div>
-    <a class="text-decoration-none" routerLink="/"><img src="../../assets/img/saladexLogo.png" alt="saladex" class="pt-3 mx-auto"></a>
+<nav class="navbar navbar-expand-lg bg-dark mb-3" data-bs-theme="dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/"><img src="../../assets/img/saladexLogo.png" alt="saladex">Home</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/search">Cerca</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/pokemon-comparison">Confronta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/pkmn-selection">Battle Sim</a>
+        </li>
+      </ul>
+    </div>
   </div>
-</header>
+</nav>
