--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,6 @@ body {
   background-position: center;
   min-height: 100vh;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
