--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
         <div class="card">
           <div class="card-body d-flex flex-column justify-content-between">
             <h5 class="card-title text-center">BATTLE SIMULATOR</h5>
-            <p class="card-text">Non ancora disponibile.</p>
+            <p class="card-text">DEMO - Scegli un pokemon e un avversario tra quelli disponibili e lotta.</p>
             <a routerLink="/pkmn-selection" class="btn btn-primary w-100">VAI</a>
           </div>
         </div>
